pmd / checkstyle / codequality